# fraudshield-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.lock.txt  requirements.txt  streamlit_app.py
app/: __init__.py  config.py  dependencies.py  main.py  rate_limit.py
app/models/: __init__.py  request.py  response.py
app/routers/: __init__.py  health.py  ingest.py  query.py
app/services/: __init__.py  chain.py  document_loader.py  embeddings.py  prompts.py  retriever.py  vector_store.py
data/: README.md
data/sample/: sample_case_notes.txt  sample_transactions.csv
demo/: app.py
demo/.streamlit/: secrets.toml.example
demo/sample_data/: sample_fraud_report.txt  sample_transactions.csv
eval/: evaluate_rag.py  test_questions.json
scripts/: bootstrap_qdrant_vm.sh  deploy_cloudrun.sh  deploy_demo_cloudrun.sh  provision_qdrant_gce.sh
tests/: conftest.py  test_chain_service.py  test_dependencies.py  test_document_loader_service.py  test_embeddings_service.py  test_health_and_root.py  test_ingest.py  test_query.py  test_retriever.py  test_vector_store.py
