[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraudshield-rag-agent"
version = "0.1.0"
description = "FraudShield RAG Agent for fraud-document investigation"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ahmad Whafa Azka Al Azkiyai" }
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "langchain>=0.3.0",
  "langchain-openai>=0.2",
  "langchain-anthropic>=0.2",
  "langchain-community>=0.3",
  "qdrant-client>=1.7",
  "sentence-transformers>=2.3",
  "pypdf>=4.0",
  "ragas>=0.1.10,<0.2.0",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.6",
  "streamlit>=1.30",
  "requests>=2.31"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=app --cov-report=term-missing -v"
